Create assets selector

--- a/locales/fr-FR/translation.json
+++ b/locales/fr-FR/translation.json
@@ -320,5 +320,7 @@
   "Address tokens": "Address tokens",
   "Address NFTs": "Address NFTs",
   "Address transactions": "Address transactions",
-  "Address settings": "Address settings"
+  "Address settings": "Address settings",
+  "Asset": "Asset",
+  "Assets": "Assets"
 }
