--- a/locales/en-US/translation.json
+++ b/locales/en-US/translation.json
@@ -319,5 +319,7 @@
   "Address tokens": "Address tokens",
   "Address NFTs": "Address NFTs",
   "Address transactions": "Address transactions",
-  "Address settings": "Address settings"
+  "Address settings": "Address settings",
+  "Asset": "Asset",
+  "Assets": "Assets"
 }
