--- a/locales/tr-TR/translation.json
+++ b/locales/tr-TR/translation.json
@@ -21,7 +21,7 @@
   "Copied": "Kopyalandı",
   "Official Wallet": "Resmi Cüzdan",
   "The easiest way to get started with Alephium.": "Alephium ile başlamanın en kolay yolu.",
-  "Genesis TX": "Genesis TX(Blokzinciri yaratılış işlemi)",
+  "Genesis TX": "Genesis TX",
   "Mining Rewards": "Madencilik ödülleri",
   "There are no addresses with available balance. Please, send some funds to one of your addresses, and try again.": "Yeterli bakiyeye sahip adres mevcut değil. Lütfen adresinize bakiye ekleyerek tekrar deneyiniz.",
   "Select": "Seç",
@@ -96,8 +96,8 @@
   "Make sure to always check what is the selected network before sending transactions.": "İşlemleri göndermeden önce hangi ağda olduğunuzdan emin olmak için her zaman kontrol edin.",
   "Network": "Ağ",
   "Node host": "Düğüm noktası barındırma hizmeti",
-  "Explorer API host": "Tarayıcı API(Upa) barındırma",
-  "Explorer URL": "Tarayıcı URL(adresi)",
+  "Explorer API host": "Tarayıcı API barındırma",
+  "Explorer URL": "URL adresi",
   "Wallet list": "Cüzdan listesi",
   "Current wallet": "Şu anki cüzdan",
   "Wallet name": "Cüzdan ismi",
@@ -248,15 +248,15 @@
   "Error in pairing": "Eşleştirme hatası",
   "WalletConnect error": "WalletConnect hatası",
   "Try again": "Tekrar dene",
-  "Connect to a dApp": "dApp (dijital uygulama) bağla",
-  "Paste what was copied from the dApp": "dApp (dijital uygulama) tarafından kopyalananları yapıştır",
+  "Connect to a dApp": "dApp bağla",
+  "Paste what was copied from the dApp": "dApp tarafından kopyalananları yapıştır",
   "Connect": "Bağlan",
   "Approve the proposal to connect": "Bağlanma talebini onaylayın",
-  "Please review the following before authorizing the dApp": "dApp (dijital uygulama) yetkilendirmesini tamamlamadan önce lütfen aşağıdakileri gözden geçirin",
+  "Please review the following before authorizing the dApp": "dApp yetkilendirmesini tamamlamadan önce lütfen aşağıdakileri gözden geçirin",
   "Name": "İsim",
-  "URL": "URL (bağlantı kaynağı",
+  "URL": "URL",
   "Description": "Tanım",
-  "Network ID": "Network ID (Ağ kimliği)",
+  "Network ID": "Ağ kimliği",
   "Address group": "Adres grubu",
   "all": "tümü",
   "Signer address": "İmzalayıcı adres",
@@ -271,8 +271,8 @@
   "Download failed, try again later.": "İndirme başarısız, daha sonra tekrar deneyin.",
   "Optional passphrase": "Tercihe bağlı kurtarma sözcükleri",
   "Pending": "Bekliyor",
-  "Mainnet": "Mainnet (Ana ağ)",
-  "Testnet": "Testnet (Test ağı)",
+  "Mainnet": "Mainnet",
+  "Testnet": "Testnet",
   "Localhost": "Localhost",
   "Delete": "Sil",
   "Timestamp": "Zaman damgası",
