Update home page

--- a/locales/en-US/translation.json
+++ b/locales/en-US/translation.json
@@ -151,7 +151,7 @@
   "Overview": "Overview",
   "Lock": "Lock",
   "Enter password": "Enter password",
-  "Login": "Login",
+  "Unlock": "Unlock",
   "Security Check": "Security Check",
   "Alright! Time to check if you got your words right!": "Alright! Time to check if you got your words right!",
   "Select the words in the right order. Ready?": "Select the words in the right order. Ready?",
@@ -188,10 +188,10 @@
   "Your address": "Your address",
   "I've copied the words, continue": "I've copied the words, continue",
   "It appears that your wallet has too many UTXOs to be able to send this transaction. Please, consolidate (merge) your UTXOs first. This will cost a small fee.": "It appears that your wallet has too many UTXOs to be able to send this transaction. Please, consolidate (merge) your UTXOs first. This will cost a small fee.",
-  "Welcome!": "Welcome!",
-  "Welcome back!": "Welcome back!",
-  "Please choose a wallet and enter your password to continue.": "Please choose a wallet and enter your password to continue.",
-  "Create / import a new wallet": "Create / import a new wallet",
+  "Welcome.": "Welcome.",
+  "Welcome back.": "Welcome back.",
+  "Unlock a wallet to continue.": "Unlock a wallet to continue.",
+  "Import or create a wallet": "Import or create a wallet",
   "(current)": "(current)",
   "Default address for sending transactions.": "Default address for sending transactions.",
   "Error while fetching data for address {{ hash }}": "Error while fetching data for address {{ hash }}",
@@ -201,7 +201,8 @@
   "passphraseWarningMessage": "<0>This is an advanced feature!</0><br />Use it only if you know what you are doing.<br />Please, read our <5>documentation</5> to learn about it.",
   "welcomeScreenPassphraseMessage": "If you want to use a <1>passphrase</1>, lock your newly created wallet.",
   "I have read and understood the documentation": "I have read and understood the documentation",
-  "Use optional passphrase (advanced)": "Use optional passphrase (advanced)",
+  "Use optional passphrase": "Use optional passphrase",
+  "Advanced feature": "Advanced feature",
   "Confirm passphrase": "Confirm passphrase",
   "Passphrases don't match": "Passphrases don't match",
   "Language": "Language",
