--- a/locales/fr-FR/translation.json
+++ b/locales/fr-FR/translation.json
@@ -152,7 +152,7 @@
   "Overview": "Vue d'ensemble",
   "Lock": "Verrouiller",
   "Enter password": "Entrez le mot de passe",
-  "Login": "Déverrouiller",
+  "Unlock": "Unlock",
   "Security Check": "Vérification de sécurité",
   "Alright! Time to check if you got your words right!": "Ok ! Il est temps de vérifier que vos mots sont corrects !",
   "Select the words in the right order. Ready?": "Sélectionnez les mots dans le bon ordre. Prêt ?",
@@ -189,10 +189,10 @@
   "Your address": "Votre adresse",
   "I've copied the words, continue": "J'ai copié les mots, continuons",
   "It appears that your wallet has too many UTXOs to be able to send this transaction. Please, consolidate (merge) your UTXOs first. This will cost a small fee.": "Il semblerait que votre wallet ait trop de UTXOs pour pouvoir envoyer cette transaction. Il vous faut d'abord consolider (fusionner) vos UTXOs (des frais s'appliquent).",
-  "Welcome!": "Bienvenue !",
-  "Welcome back!": "De retour !",
-  "Please choose a wallet and enter your password to continue.": "Choisissez un wallet et entrez votre mot de passe pour continuer.",
-  "Create / import a new wallet": "Créer / importer un nouveau wallet",
+  "Welcome.": "Bienvenue.",
+  "Welcome back.": "De retour.",
+  "Unlock a wallet to continue.": "Unlock a wallet to continue.",
+  "Import or create a wallet": "Import or create a wallet",
   "(current)": "(actif)",
   "Default address for sending transactions.": "Adresse par défaut pour effectuer des transactions.",
   "Error while fetching data for address {{ hash }}": "Erreur lors de la récupération des données de l'adresse {{ hash }}",
@@ -202,7 +202,8 @@
   "passphraseWarningMessage": "<0>Ceci est une fonctionnalité avancée !</0><br />Utilisez la seulement si vous savez ce que vous faites.<br />Lisez notre <5>documentation</5> pour en apprendre plus.",
   "welcomeScreenPassphraseMessage": "Si vous désirez utiliser une <1>phrase de passe</1>, verrouillez votre wallet fraîchement créé.",
   "I have read and understood the documentation": "J'ai lu et compris la documentation",
-  "Use optional passphrase (advanced)": "Utiliser la phrase de passe optionnelle (avancé)",
+  "Use optional passphrase": "Utiliser la phrase de passe optionnelle",
+  "Advanced feature": "Advanced feature",
   "Confirm passphrase": "Confirmer la phrase de passe",
   "Passphrases don't match": "Les phrases de passe ne sont pas identiques",
   "Language": "Langue",
