--- a/locales/vi-VN/translation.json
+++ b/locales/vi-VN/translation.json
@@ -151,7 +151,7 @@
   "Overview": "Tổng quan",
   "Lock": "Khoá",
   "Enter password": "Nhập mật khẩu",
-  "Login": "Đăng nhập",
+  "Unlock": "Unlock",
   "Security Check": "Kiểm tra bảo mật",
   "Alright! Time to check if you got your words right!": "Tuyệt! Bây giờ hãy kiểm tra nếu bạn ghi chính xác các cụm từ nhé!",
   "Select the words in the right order. Ready?": "Chọn các từ khôi phục với trình tự chính xác. Sẳn sàng chứ?",
@@ -188,10 +188,10 @@
   "Your address": "Địa chỉ ví của bạn",
   "I've copied the words, continue": "Tôi đã sao chép các cụm từ khôi phục, tiếp tục",
   "It appears that your wallet has too many UTXOs to be able to send this transaction. Please, consolidate (merge) your UTXOs first. This will cost a small fee.": "Ví của bạn có quá nhiều các UTXOs để có thể thực hiện được giao dịch. Vui lòng hợp nhất (merge) các UTXOs. Thao tác này sẽ cần một ít phí.",
-  "Welcome!": "Chào mừng!",
-  "Welcome back!": "Chào mừng bạn quay trở lại!",
-  "Please choose a wallet and enter your password to continue.": "Vui lòng chọn ví và gõ mật khẩu tương ứng để tiếp tục.",
-  "Create / import a new wallet": "Tạo / thêm ví mới",
+  "Welcome.": "Chào mừng.",
+  "Welcome back.": "Chào mừng bạn quay trở lại.",
+  "Unlock a wallet to continue.": "Unlock a wallet to continue.",
+  "Import or create a wallet": "Import or create a wallet",
   "(current)": "(hiện tại)",
   "Default address for sending transactions.": "Địa chỉ ví mặc định để gửi các giao dịch.",
   "Error while fetching data for address {{ hash }}": "Đã xãy ra lỗi trong quá trình tải dữ liệu cho ví {{ hash }}",
@@ -201,7 +201,8 @@
   "passphraseWarningMessage": "<0>Đây là một tính năng nâng cao!</0><br />Chỉ sử dụng tính năng này nếu bạn biết về chúng.<br />Vui lòng tham khảo tài liệu <5>documentation</5> để biết thêm thông tin chi tiết.",
   "welcomeScreenPassphraseMessage": "Nếu bạn muốn sử dụng một <1>passphrase</1>, khoá ví vừa mới tạo.",
   "I have read and understood the documentation": "Tôi đã đọc và hiểu về tài liệu",
-  "Use optional passphrase (advanced)": "Sử dụng cụm từ khôi phục tuỳ chỉnh (nâng cao)",
+  "Use optional passphrase": "Sử dụng cụm từ khôi phục tuỳ chỉnh",
+  "Advanced feature": "Advanced feature",
   "Confirm passphrase": "Xác nhận cụm từ khôi phục",
   "Passphrases don't match": "Cụm từ khôi phục không trùng khớp",
   "Language": "Ngôn ngữ",
