--- a/locales/de-DE/translation.json
+++ b/locales/de-DE/translation.json
@@ -151,7 +151,7 @@
   "Overview": "Übersicht",
   "Lock": "Sperren",
   "Enter password": "Passwort eingeben",
-  "Login": "Anmelden",
+  "Unlock": "Unlock",
   "Security Check": "Sicherheitsprüfung",
   "Alright! Time to check if you got your words right!": "Alles klar! Prüfen Sie, ob Sie die Wörter richtig geschrieben haben!",
   "Select the words in the right order. Ready?": "Wählen Sie die Wörter in der richtigen Reihenfolge aus. Bist du bereit?",
@@ -188,10 +188,10 @@
   "Your address": "Ihre Adresse",
   "I've copied the words, continue": "Ich habe die Worte kopiert, fahren Sie fort",
   "It appears that your wallet has too many UTXOs to be able to send this transaction. Please, consolidate (merge) your UTXOs first. This will cost a small fee.": "Es scheint, dass Ihre Brieftasche zu viele UTXOs hat, um diese Transaktion senden zu können. Bitte konsolidieren (fusionieren) Sie zunächst Ihre UTXOs. Dies wird eine kleine Gebühr kosten.",
-  "Welcome!": "Willkommen!",
-  "Welcome back!": "Willkommen zurück!",
-  "Please choose a wallet and enter your password to continue.": "Bitte wählen Sie eine Wallet und geben Sie Ihr Passwort ein, um fortzufahren.",
-  "Create / import a new wallet": "Erstellen / Importieren einer neuen Wallet",
+  "Welcome.": "Willkommen.",
+  "Welcome back.": "Willkommen zurück.",
+  "Unlock a wallet to continue.": "Unlock a wallet to continue.",
+  "Import or create a wallet": "Import or create a wallet",
   "(current)": "(aktuell)",
   "Default address for sending transactions.": "Standardadresse für das Senden von Transaktionen.",
   "Error while fetching data for address {{ hash }}": "Fehler beim Abrufen von Daten für Adresse {{ hash }}",
@@ -201,7 +201,8 @@
   "passphraseWarningMessage": "<0>Dies ist eine fortgeschrittene Funktion!</0><br />Verwenden Sie sie nur, wenn Sie wissen, was Sie tun.<br />Bitte lesen Sie unsere <5>Dokumentation</5>, um mehr darüber zu erfahren.",
   "welcomeScreenPassphraseMessage": "Wenn Sie eine <1>Passphrase</1> verwenden möchten, sperren Sie Ihre neu erstellte Brieftasche.",
   "I have read and understood the documentation": "Ich habe die Dokumentation gelesen und verstanden",
-  "Use optional passphrase (advanced)": "Optionale Passphrase verwenden (erweitert)",
+  "Use optional passphrase": "Optionale Passphrase verwenden",
+  "Advanced feature": "Advanced feature",
   "Confirm passphrase": "Passphrase bestätigen",
   "Passphrases don't match": "Passphrasen stimmen nicht überein",
   "Language": "Sprache",
