Create Send modal steps indicators

--- a/locales/de-DE/translation.json
+++ b/locales/de-DE/translation.json
@@ -322,5 +322,7 @@
   "Address transactions": "Address transactions",
   "Address settings": "Address settings",
   "Asset": "Asset",
-  "Assets": "Assets"
+  "Assets": "Assets",
+  "Info": "Info",
+  "Confirm": "Confirm"
 }
