--- a/locales/fr-FR/translation.json
+++ b/locales/fr-FR/translation.json
@@ -325,5 +325,6 @@
   "Asset": "Asset",
   "Assets": "Assets",
   "Info": "Info",
-  "Confirm": "Confirm"
+  "Confirm": "Confirm",
+  "You can disable this confirmation step from the wallet settings.": "You can disable this confirmation step from the wallet settings."
 }
