--- a/locales/fr-FR/translation.json
+++ b/locales/fr-FR/translation.json
@@ -26,7 +26,7 @@
   "There are no addresses with available balance. Please, send some funds to one of your addresses, and try again.": "Aucune adresse avec des fonds. Envoyez s'il vous plaît des fonds sur une de vos adresse puis recommencer.",
   "Select": "Sélectionner",
   "Amount exceeds available balance": "Le montant est supérieur au fonds disponible",
-  "Available": "Disponible",
+  "available": "disponible",
   "Use max amount": "Utiliser le montant max",
   "Current network": "Réseau actif",
   "Direction": "Direction",
@@ -324,6 +324,7 @@
   "Address settings": "Address settings",
   "Asset": "Asset",
   "Assets": "Assets",
+  "Add asset": "Add asset",
   "Info": "Info",
   "Confirm": "Confirm",
   "You can disable this confirmation step from the wallet settings.": "You can disable this confirmation step from the wallet settings."
