enhance Vietnamese translation

--- a/locales/vi-VN/App.json
+++ b/locales/vi-VN/App.json
@@ -5,50 +5,50 @@
   "New wallet": "Tạo ví mới",
   "Import wallet": "Thêm ví đã có sẳn",
   "Amount must be greater than {{ minAmountInAlph }}": "Số lượng phải lớn hơn {{ minAmountInAlph }}",
-  "Could not connect to the {{ currentNetwork }} network.": "Không thể kết nối đến mạng {{ currentNetwork }}.",
-  "Note that if activated, \"{{ address }}\" will not be the default address anymore.": "Lưu ý, nếu đã kích hoạt, \"{{ address }}\" sẽ không còn là địa chỉ mặc định nữa.",
+  "Could not connect to the {{ currentNetwork }} network.": "Không thể kết nối đến Network hiện tại {{ currentNetwork }}.",
+  "Note that if activated, \"{{ address }}\" will not be the default address anymore.": "Lưu ý: Nếu kích hoạt, \"{{ address }}\" sẽ không còn là địa chỉ mặc định nữa.",
   "Error while sweeping address {{ from }}": "Lỗi khi sweep từ địa chỉ {{ from }}",
   "Remove wallet \"{{ walletName }}\"": "Gỡ bỏ ví \"{{ walletName }}\"",
   "Enter password for \"{{ switchToWalletName }}\"": "Nhập mật khẩu cho \"{{ switchToWalletName }}\"",
   "{{ amount }} words entered": "{{ amount }} từ đã thêm vào",
   "Address label": "Nhãn ví",
-  "The wallet is offline.": "Ví offline.",
+  "The wallet is offline.": "Ví đang offline.",
   "Discreet mode": "Ẩn số dư",
   "Default address": "Địa chỉ mặc định",
   "Settings": "Cài đặt",
   "Copied to clipboard!": "Đã sao chép vào clipboard!",
   "Copy to clipboard": "Sao chép vào clipboard",
   "Copied": "Đã sao chép",
-  "Official Wallet": "Ví chính thức",
-  "The easiest way to get started with Alephium.": "Cách đơn giản nhất để bắt đầu với Alephium.",
+  "Official Wallet": "Ví Desktop chính thức",
+  "The easiest way to get started with Alephium.": "Alephium là blockchain Layer 1 đầu tiên giúp mở rộng quy mô và cải thiện trên các công nghệ cốt lõi của Bitcoin, Proof of Less Work & UTXO.",
   "Genesis TX": "Giao dịch genesis",
   "Mining Rewards": "Phần thưởng khai thác",
-  "There are no addresses with available balance. Please, send some funds to one of your addresses, and try again.": "Không có địa chỉ ví nào có đủ số dư. Vui lòng nạp thêm vào tài khoản và thử lại sau.",
+  "There are no addresses with available balance. Please, send some funds to one of your addresses, and try again.": "Không có địa chỉ ví nào có đủ số dư. Vui lòng nạp thêm vào tài khoản và thử lại.",
   "Select": "Chọn",
-  "Amount exceeds available balance": "Số lượng vượt quá số dư tài khoản",
+  "Amount exceeds available balance": "Số lượng vượt quá số dư khả dụng",
   "Available": "Có sẳn",
   "Use max amount": "Sử dụng tất cả số dư",
   "Current network": "Mạng hiện tại",
   "Amount": "Số lượng",
   "Show more": "Hiện thêm",
-  "No transactions to display": "Không có giao dịch nào để hiển thị",
+  "No transactions to display": "Không có giao dịch nào để hiện thị",
   "Invalid password": "Mật khẩu không chính xác",
   "Submit": "Gửi",
-  "TOTAL BALANCE": "TỔNG SỐ DƯ",
+  "TOTAL BALANCE": "TỔNG TÀI SẢN",
   "AVAILABLE": "KHẢ DỤNG",
   "LOCKED": "KHOÁ",
   "Could not fetch data because the wallet is offline": "Không thể đẩy dữ liệu vì ví đang ngoại tuyến",
   "Unknown wallet name": "Tên ví không xác định",
   "To remove this address from being the default address, you must set another one as default first.": "Bạn cần phải đặt một địa chỉ ví mặc định mới trước khi gỡ nhãn mặc định địa chỉ ví này.",
   "Address options": "Tuỳ chọn địa chỉ",
-  "Sweep address": "Sweep địa chỉ",
+  "Sweep address": "Sweep tài sản",
   "Sweep all the unlocked funds of this address to another address.": "Sweep tất cả tài sản khả dụng từ ví này sang ví khác.",
   "Sweep": "Sweep ngay",
   "Cancel": "Huỷ bỏ",
   "Save": "Lưu lại",
   "Error while building transaction": "Đã xãy ra lỗi trong khi thiết lập giao dịch",
   "From address": "Từ địa chỉ",
-  "Select the address to sweep the funds from.": "Chọn địa chỉ ví cần sweep tài sản vào.",
+  "Select the address to sweep the funds from.": "Chọn địa chỉ ví cần sweep vào tài sản.",
   "To address": "Đến địa chỉ",
   "Select the address to sweep the funds to.": "Chọn địa chỉ ví cần sweep tài sản đến.",
   "sweepOperationFromTo": "Thao tác này sẽ sweep toàn bộ tài sản từ <1>{{ from }}</1> và di chuyển vào <3>{{ to }}</3>.",
@@ -81,12 +81,12 @@
   "Error while sending the transaction": "Đã xãy ra lỗi trong quá trình gửi giao dịch",
   "Enter your password to send the transaction.": "Nhập mật khẩu để thực hiện giao dịch.",
   "Lock time": "Thời gian khoá",
-  "Duration in minutes after which an idle wallet will lock automatically.": "Ví sẽ được tự động khoá bảo vệ nếu không có bất kỳ hoạt động nào trong vài phút.",
+  "Duration in minutes after which an idle wallet will lock automatically.": "Ví sẽ được tự động khoá bảo vệ nếu không có bất kỳ hoạt động nào.",
   "Minutes": "Phút",
   "Off": "Tắt",
   "Theme": "Giao diện",
   "Select the theme and please your eyes.": "Chọn giao diện mong muốn.",
-  "Toggle discreet mode (hide amounts).": "Bật chế độ ẩn (ẩn số dư tài sản).",
+  "Toggle discreet mode (hide amounts).": "Bật chế độ ẩn số dư tài sản.",
   "Password requirement": "Yêu cầu mật khẩu",
   "Require password confirmation before sending each transaction.": "Xác nhận bằng mật khẩu trước khi thực hiện các giao dịch.",
   "Password": "Mật khẩu",
@@ -98,7 +98,7 @@
   "Node host": "Node host",
   "Explorer API host": "Explorer API host",
   "Explorer URL": "Explorer URL",
-  "Wallet list": "Danh sách các ví",
+  "Wallet list": "Danh sách ví của bạn",
   "Current wallet": "Ví hiện tại",
   "Wallet name": "Tên ví",
   "Lock current wallet": "Khoá bảo vệ ví hiện tại",
@@ -107,7 +107,7 @@
   "Version": "Phiên bản",
   "General": "Tổng quan",
   "Networks": "Mạng",
-  "Wallets": "Ví",
+  "Wallets": "Ví Desktop",
   "from": "từ",
   "to": "đến",
   "in": "trong",
@@ -121,7 +121,7 @@
   "Inputs": "Inputs",
   "Outputs": "Outputs",
   "New version": "Phiên bản mới",
-  "Version {{ newVersion }} is available. Click \"Update\" to avoid any issues with wallet.": "Phiên bản {{ newVersion }} vừa mới được phát hành. Vui lòng tải về và cài đặt để khắc phục các lỗi hiện đang có.",
+  "Version {{ newVersion }} is available. Click \"Update\" to avoid any issues with wallet.": "Phiên bản {{ newVersion }} vừa mới được phát hành. Vui lòng nhấn \"Cập nhật\" để tránh những lỗi đang hiện có.",
   "Download": "Tải về",
   "Please make sure to have your recovery phrase saved and stored somewhere secure to restore your wallet in the future. Without the recovery phrase, your wallet will be unrecoverable and permanently lost.": "Hãy chắc chắn rằng bạn đã lưu trữ cụm từ khôi phục bí mật một cách nơi an toàn. Bạn sẽ cần đến các cụm từ khôi phục này trong tương lai. Nếu bạn đánh mất các cụm từ khôi phục này, ví của bạn sẽ không có cách nào khôi phục lại.",
   "Not your keys, not your coins.": "Not your keys, not your coins.",
@@ -163,13 +163,13 @@
   "Enter password": "Nhập mật khẩu",
   "Login": "Đăng nhập",
   "Security Check": "Kiểm tra bảo mật",
-  "Alright! Time to check if you got your words right!": "Tuyệt! Bây giờ hãy kiểm tra nếu bạn ghi chính xác các cụm từ nhé!",
-  "Select the words in the right order. Ready?": "Chọn các từ khôi phục với trình tự chính xác. Sẳn sàng chứ?",
-  "Ready!": "Sẳn sàng!",
+  "Alright! Time to check if you got your words right!": "Tuyệt vời! Bây giờ hãy kiểm tra nếu bạn ghi chính xác các cụm từ nhé!",
+  "Select the words in the right order. Ready?": "Chọn các từ khôi phục với thứ tự chính xác. Sẳn sàng chứ?",
+  "Ready!": "BẮT ĐẦU!",
   "Something went wrong when creating encrypted wallet.": "Đã xãy ra lỗi trong quá trình tạo ví mã hoá.",
   "Select the words in the right order.": "Chọn các cụm từ khôi phục với trình tự chính xác.",
-  "It seems like you made a mistake in the words' order. But don't worry, you can reorder the words by dragging them around.": "Rất tiếc, đã xãy ra lỗi trong quá trình chọn các cụm từ khôi phục. Nhưng đừng lo, bạn có thể thay đổi thứ tự của chúng bằng cách kéo thả đến các vị trí mong muốn.",
-  "Great job! Remember to keep those words safe.": "Xin chúc mừng! Hãy nhớ giữ các cụm từ khôi phục một cách an toàn.",
+  "It seems like you made a mistake in the words' order. But don't worry, you can reorder the words by dragging them around.": "Rất tiếc, thứ tự của các cụm từ khôi phục không chính xác. Hãy thử thay đổi thứ tự các từ bằng cách kéo thả đến vị trí mong muốn.",
+  "Great job! Remember to keep those words safe.": "Xin chúc mừng! Hãy nhớ luôn giữ các cụm từ khôi phục một cách an toàn.",
   "Continue": "Tiếp tục",
   "Password is too weak": "Mật khẩu quá yếu",
   "Insecure password": "Mật khẩu không an toàn",
@@ -186,17 +186,17 @@
   "Error while importing wallet": "Đã xãy ra lỗi trong quá trình khôi phục ví",
   "Make sure to store the words in a secure location! They are your wallet's secret recovery phrase.": "Hãy chắc chắn rằng bạn đã lưu trữ cụm từ khôi phục ở nơi an toàn! Các cụm từ này sẽ được dùng để khôi phục lại ví của bạn trong tương lai.",
   "All good? Let's continue!": "Mọi thứ đã sẳn sàng? Hãy tiếp tục!",
-  "Everything is ready!": "Mọi thứ đã sẳn sàng!",
-  "Welcome to Alephium.": "Chào mừng bạn đến với Alephium.",
+  "Everything is ready!": "Tấ cả đã sẳn sàng!",
+  "Welcome to Alephium.": "Chào mừng bạn đến với Alephium",
   "Let's go!": "Bắt đầu!",
-  "welcomeScreenOneAddressPerGroupMessage": "Người dùng nâng cao: bạn muốn bắt đầu với <1>một địa chỉ ví trên một nhóm for dành cho thợ đào hoặc DeFi?</1>",
+  "welcomeScreenOneAddressPerGroupMessage": "Người dùng nâng cao: Bạn muốn bắt đầu với <1>một địa chỉ ví trên nhóm dành cho thợ đào hoặc DeFi?</1>",
   "Show advanced options": "Hiện các tuỳ chọn nâng cao",
   "Hide advanced options": "Ẩn các tuỳ chọn nâng cao",
   "For mining or DeFi use.": "Dùng cho việc khai thác (mining) hoặc sử dụng vào DeFi.",
   "Address copied to clipboard!": "Địa chỉ ví đã được lưu vào clipboard!",
   "Your Wallet": "Ví của bạn",
   "Your address": "Địa chỉ ví của bạn",
-  "I've copied the words, continue": "Tôi đã sao chép các cụm từ khôi phục, tiếp tục",
+  "I've copied the words, continue": "Tôi đã sao chép các cụm từ khôi phục. Tiếp tục",
   "Advanced operations reserved to more experienced users. A \"normal\" user should not need to use them very often, if not at all.": "Các thao tác nâng cao được dành riêng để cải thiện thêm về trải nghiệm người dùng. Nếu bạn là một người dùng \"bình thường\", chúng tối không khuyến khích bạn sử dụng các tính năng nâng cao này thường xuyên.",
   "It appears that your wallet has too many UTXOs to be able to send this transaction. Please, consolidate (merge) your UTXOs first. This will cost a small fee.": "Ví của bạn có quá nhiều các UTXOs để có thể thực hiện được giao dịch. Vui lòng hợp nhất (merge) các UTXOs. Thao tác này sẽ cần một ít phí.",
   "Welcome!": "Chào mừng!",
@@ -208,8 +208,8 @@
   "Error while fetching data for address {{ hash }}": "Đã xãy ra lỗi trong quá trình tải dữ liệu cho ví {{ hash }}",
   "Error while fetching pending transactions for address {{ hash }}": "Đã xãy ra lỗi trong quá trình tải dữ liệu giao dịch đang chờ cho địa chỉ ví {{ hash }}",
   "Open in explorer": "Xem trên explorer",
-  "Reduce": "Reduce",
-  "Show addresses": "Hiện địa chỉ ví",
+  "Reduce": "Ẩn",
+  "Show addresses": "Hiện ví phụ",
   "More info": "Thông tin thêm",
   "passphraseWarningMessage": "<0>Đây là một tính năng nâng cao!</0><br />Chỉ sử dụng tính năng này nếu bạn biết về chúng.<br />Vui lòng tham khảo tài liệu <5>documentation</5> để biết thêm thông tin chi tiết.",
   "welcomeScreenPassphraseMessage": "Nếu bạn muốn sử dụng một <1>passphrase</1>, khoá ví vừa mới tạo.",
@@ -233,8 +233,8 @@
   "Unlocks at": "Mở khoá tại",
   "Unlocked at": "Đã khoá tại",
   "Label": "Nhãn",
-  "Last used": "Lần cuối cập nhật",
-  "Transactions": "Giao dịch",
+  "Last used": "Cập nhật gần nhất",
+  "Transactions": "Số lượng giao dịch",
   "ALPH amount": "Số lượng ALPH",
   "Set lock time": "Đặt thời gian khoá",
   "Tweak gas settings": "Tuỳ chỉnh cài đặt gas",
@@ -243,30 +243,38 @@
   "Issue token amount": "Issue token amount",
   "Tokens to issue (optional)": "Tokens to issue (optional)",
   "Gas": "Gas",
-  "Review": "Review",
+  "Review": "Xem lại",
   "Invalid address group for the WallectConnect connection": "Invalid address group for the WallectConnect connection",
   "Error in pairing": "Error in pairing",
   "WalletConnect error": "WalletConnect error",
-  "Try again": "Try again",
-  "Connect to a dApp": "Connect to a dApp",
-  "Paste what was copied from the dApp": "Paste what was copied from the dApp",
-  "Connect": "Connect",
+  "Try again": "Thử lại",
+  "Connect to a dApp": "Kết nối đến dApp",
+  "Paste what was copied from the dApp": "Dán vào từ dApp",
+  "Connect": "Kết nối",
   "Approve the proposal to connect": "Approve the proposal to connect",
-  "Please review the following before authorizing the dApp": "Please review the following before authorizing the dApp",
-  "Name": "Name",
+  "Please review the following before authorizing the dApp": "Vui lòng kiểm tra lại trước khi xác thực dApp",
+  "Name": "Tên",
   "URL": "URL",
-  "Description": "Description",
+  "Description": "Mô tả",
   "Network ID": "Network ID",
-  "Address group": "Address group",
-  "all": "all",
+  "Address group": "Địa chỉ nhóm",
+  "all": "tất cả",
   "Signer address": "Signer address",
-  "Select an address to sign with.": "Select an address to sign with.",
-  "Reject": "Reject",
-  "Approve": "Approve",
-  "Unable to convert the amount": "Unable to convert the amount",
-  "The amount must be greater than {{ minAmount }}": "The amount must be greater than {{ minAmount }}",
-  "Restart the application to install the new update.": "Restart the application to install the new update.",
-  "Downloaded {{ percent }}%": "Downloaded {{ percent }}%",
-  "Update": "Update",
-  "Download failed, try again later.": "Download failed, try again later."
+  "Select an address to sign with.": "Chọn địa chỉ cần ký.",
+  "Reject": "Từ chối",
+  "Approve": "Chấp nhận",
+  "Unable to convert the amount": "Không thể chuyển đổi số lượng",
+  "The amount must be greater than {{ minAmount }}": "Số lượng phải lớn hơn hoặc bằng {{ minAmount }}",
+  "Restart the application to install the new update.": "Khởi động lại ứng dụng để hoàn tất cài đặt phiên bản mới.",
+  "Downloaded {{ percent }}%": "Đã tải về {{ percent }}%",
+  "Update": "Cập nhật",
+  "Download failed, try again later.": "Tải về không thành công, vui lòng thử lại.",
+  "Optional passphrase": "Tuỳ chọn passphrase",
+  "Pending": "Đang chờ",
+  "Mainnet": "Mainnet",
+  "Testnet": "Testnet",
+  "Localhost": "Localhost",
+  "Delete": "Xoá",
+  "Timestamp": "Timestamp",
+  "Lock time must be in the future.": "Thời gian khoá trong tương lai."
 }
