Change decimal error text

--- a/locales/fr-FR/translation.json
+++ b/locales/fr-FR/translation.json
@@ -328,5 +328,5 @@
   "Info": "Info",
   "Confirm": "Confirm",
   "You can disable this confirmation step from the wallet settings.": "You can disable this confirmation step from the wallet settings.",
-  "Amount can have maximum {{ decimals }} decimal points": "Amount can have maximum {{ decimals }} decimal points"
+  "This asset cannot have more than {{ decimals }} decimals": "This asset cannot have more than {{ decimals }} decimals"
 }
