--- a/locales/en-US/translation.json
+++ b/locales/en-US/translation.json
@@ -328,5 +328,6 @@
   "Confirm": "Confirm",
   "You can disable this confirmation step from the wallet settings.": "You can disable this confirmation step from the wallet settings.",
   "This asset cannot have more than {{ decimals }} decimals": "This asset cannot have more than {{ decimals }} decimals",
-  "Set gas and lock time": "Set gas and lock time"
+  "Set gas and lock time": "Set gas and lock time",
+  "Set gas settings": "Set gas settings"
 }
