--- a/locales/fr-FR/translation.json
+++ b/locales/fr-FR/translation.json
@@ -329,5 +329,6 @@
   "You can disable this confirmation step from the wallet settings.": "You can disable this confirmation step from the wallet settings.",
   "This asset cannot have more than {{ decimals }} decimals": "This asset cannot have more than {{ decimals }} decimals",
   "Lock time must be in the future.": "Le temps de verrouillage doit être dans le futur.",
-  "Set gas and lock time": "Set gas and lock time"
+  "Set gas and lock time": "Set gas and lock time",
+  "Set gas settings": "Set gas settings"
 }
