--- a/locales/en-US/translation.json
+++ b/locales/en-US/translation.json
@@ -329,5 +329,6 @@
   "You can disable this confirmation step from the wallet settings.": "You can disable this confirmation step from the wallet settings.",
   "This asset cannot have more than {{ decimals }} decimals": "This asset cannot have more than {{ decimals }} decimals",
   "Set gas and lock time": "Set gas and lock time",
-  "Set gas settings": "Set gas settings"
+  "Set gas settings": "Set gas settings",
+  "No contacts found. You can create contacts in the Addresses page.": "No contacts found. You can create contacts in the Addresses page."
 }
