--- a/locales/fr-FR/translation.json
+++ b/locales/fr-FR/translation.json
@@ -331,5 +331,6 @@
   "Lock time must be in the future.": "Le temps de verrouillage doit être dans le futur.",
   "Set gas and lock time": "Set gas and lock time",
   "Set gas settings": "Set gas settings",
-  "No contacts found. You can create contacts in the Addresses page.": "No contacts found. You can create contacts in the Addresses page."
+  "No contacts found. You can create contacts in the Addresses page.": "No contacts found. You can create contacts in the Addresses page.",
+  "Select the address to receive funds to.": "Select the address to receive funds to."
 }
