--- a/locales/vi-VN/translation.json
+++ b/locales/vi-VN/translation.json
@@ -330,5 +330,6 @@
   "This asset cannot have more than {{ decimals }} decimals": "This asset cannot have more than {{ decimals }} decimals",
   "Set gas and lock time": "Set gas and lock time",
   "Set gas settings": "Set gas settings",
-  "No contacts found. You can create contacts in the Addresses page.": "No contacts found. You can create contacts in the Addresses page."
+  "No contacts found. You can create contacts in the Addresses page.": "No contacts found. You can create contacts in the Addresses page.",
+  "Select the address to receive funds to.": "Select the address to receive funds to."
 }
