--- a/locales/fr-FR/translation.json
+++ b/locales/fr-FR/translation.json
@@ -332,5 +332,7 @@
   "Set gas and lock time": "Set gas and lock time",
   "Set gas settings": "Set gas settings",
   "No contacts found. You can create contacts in the Addresses page.": "No contacts found. You can create contacts in the Addresses page.",
-  "Select the address to receive funds to.": "Select the address to receive funds to."
+  "Select the address to receive funds to.": "Select the address to receive funds to.",
+  "Choose a contact": "Choose a contact",
+  "No options match the search criteria.": "No options match the search criteria."
 }
