Update asset select modal

--- a/locales/fr-FR/translation.json
+++ b/locales/fr-FR/translation.json
@@ -334,5 +334,6 @@
   "No contacts found. You can create contacts in the Addresses page.": "No contacts found. You can create contacts in the Addresses page.",
   "Select the address to receive funds to.": "Select the address to receive funds to.",
   "Choose a contact": "Choose a contact",
-  "No options match the search criteria.": "No options match the search criteria."
+  "No options match the search criteria.": "No options match the search criteria.",
+  "Select an asset": "Select an asset"
 }
