Store wallet data using ID instead of name as key

--- a/locales/en-US/translation.json
+++ b/locales/en-US/translation.json
@@ -26,7 +26,7 @@
   "There are no addresses with available balance. Please, send some funds to one of your addresses, and try again.": "There are no addresses with available balance. Please, send some funds to one of your addresses, and try again.",
   "Select": "Select",
   "Amount exceeds available balance": "Amount exceeds available balance",
-  "available": "available",
+  "Available": "Available",
   "Use max amount": "Use max amount",
   "Current network": "Current network",
   "Amount": "Amount",
@@ -191,6 +191,7 @@
   "Welcome.": "Welcome.",
   "Welcome back.": "Welcome back.",
   "Unlock a wallet to continue.": "Unlock a wallet to continue.",
+  "Unlock your wallet to continue.": "Unlock your wallet to continue.",
   "Import or create a wallet": "Import or create a wallet",
   "(current)": "(current)",
   "Default address for sending transactions.": "Default address for sending transactions.",
