Apply comments of translator

--- a/locales/de-DE/translation.json
+++ b/locales/de-DE/translation.json
@@ -6,8 +6,8 @@
   "Import wallet": "Wallet importieren",
   "Amount must be greater than {{ minAmountInAlph }}": "Betrag muss größer sein als {{ minAmountInAlph }}",
   "Could not connect to the {{ currentNetwork }} network.": "Konnte keine Netzwerkverbindung herstellen.",
-  "Note that if activated, \"{{ address }}\" will not be the default address anymore.": "Beachten Sie, bei Aktivierung \"{{ address }}\" wird dies nicht mehr die Standardadresse.",
-  "Error while sweeping address {{ from }}": "Fehler beim Durchsuchen der Adresse {{ from }}",
+  "Note that if activated, \"{{ address }}\" will not be the default address anymore.": "Beachten Sie, dass bei Aktivierung, \"{{ address }}\" nicht mehr die Standardadresse sein wird.",
+  "Error while sweeping address {{ from }}": "Fehler beim entleeren der Adresse {{ from }}",
   "Remove wallet \"{{ walletName }}\"": "Wallet entfernen \"{{ walletName }}\"",
   "Enter password for \"{{ switchToWalletName }}\"": "Passwort für \"{{ switchToWalletName }}\" eingeben",
   "{{ amount }} words entered": "{{ amount }} Wörter eingegeben",
@@ -202,7 +202,7 @@
   "Welcome!": "Willkommen!",
   "Welcome back!": "Willkommen zurück!",
   "Please choose a wallet and enter your password to continue.": "Bitte wählen Sie eine Wallet und geben Sie Ihr Passwort ein, um fortzufahren.",
-  "Create / import a new wallet": "Erstellen / Importieren eine neue Wallet",
+  "Create / import a new wallet": "Erstellen / Importieren einer neuen Wallet",
   "(current)": "(aktuell)",
   "Default address for sending transactions.": "Standardadresse für das Senden von Transaktionen.",
   "Error while fetching data for address {{ hash }}": "Fehler beim Abrufen von Daten für Adresse {{ hash }}",
