--- a/locales/fr-FR/translation.json
+++ b/locales/fr-FR/translation.json
@@ -336,5 +336,7 @@
   "Select the address to receive funds to.": "Select the address to receive funds to.",
   "Choose a contact": "Choose a contact",
   "No options match the search criteria.": "No options match the search criteria.",
-  "Select an asset": "Select an asset"
+  "Select an asset": "Select an asset",
+  "Change wallet name": "Change wallet name",
+  "Could not save new wallet name.": "Could not save new wallet name."
 }
