--- a/locales/fr-FR/translation.json
+++ b/locales/fr-FR/translation.json
@@ -351,5 +351,7 @@
   "Please, backup your secret phrase instead.": "Please, backup your secret phrase instead.",
   "Never disclose this key.": "Never disclose this key.",
   "Anyone with your private keys can steal any assets held in your addresses.": "Anyone with your private keys can steal any assets held in your addresses.",
-  "Copy to clipboard failed": "Copy to clipboard failed"
+  "Copy to clipboard failed": "Copy to clipboard failed",
+  "Change wallet name": "Change wallet name",
+  "Could not save new wallet name.": "Could not save new wallet name."
 }
